# moving-object-detection

./: .gitignore  LICENSE
ws/camera_simulations/: CMakeLists.txt  package.xml
ws/camera_simulations/launch/: camera_coke_gazebo2.launch  kinect_coke_gazebo2.launch
ws/src/camera_simulations/: CMakeLists.txt
ws/src/camera_simulations/config/: gazebo_simulation.rviz
ws/src/camera_simulations/launch/: camera_coke_rviz2.launch  camera_flying_box_gazebo.launch  camera_gazebo2.launch  camera_simulation.launch  gazebo_world.launch  kinect_coke_rviz.launch
ws/src/camera_simulations/models/kinect-plugin/: model.sdf
ws/src/camera_simulations/models/pavement/: model.config  model.sdf
ws/src/camera_simulations/models/pavement/materials/scripts/: pavement.material
ws/src/camera_simulations/plugins/: actor_plugin.cpp  actor_plugin.h
ws/src/camera_simulations/robot/: aruco_seven_dof_arm_with_rgbd.xacro  camera_left.urdf.xacro  camera_right.urdf.xacro
ws/src/camera_simulations/worlds/: camera_simulation_custom_actor.world  camera_simulation_scripted_trajectory.world  dynamic_and_static_world_moving_kinect.world  dynamic_world_static_camera.world  kinect_bus.world  moving_kinect.world  static_world_moving_kinect.world
ws/src/motion_detection/: CMakeLists.txt  package.xml
ws/src/motion_detection/launch/: motion_detection.launch
ws/src/motion_detection/scripts/: actor_pose_dumper.py  motion_detection_node.py  rgbd_publisher.py  run_tests.bash
