<?xml version="1.0"?>
<package format="2">
  <name>motion_detection</name>
  <version>0.0.0</version>
  <description>The motion_detection package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
</package>
